# qt-uiautomation-id

./: .gitignore  LICENSE  README.md
.github/workflows/: build.yaml
Patches/: qt-ui-automation-id-qtbase.patch  qt-ui-automation-id-qtdeclarative.patch
Test/: CMakeLists.txt  Main.qml  form.cpp  form.ui  main.cpp
UIATest/: AppiumServiceFixture.cs  QtDeclarativeTests.cs  QtWidgetTests.cs  UIATest.csproj  UIATest.sln
scripts/: CloneAndInitializeQtSources.ps1  ConfigureAndBuild.ps1
